[package]
name = "enum-field"
version = "0.1.1"
edition = "2024"
description = "Declarative macros for enum-based heterogeneous field accessors."
license = "MIT"
readme = "README.md"
repository = "https://github.com/dzmitry-lahoda/enum-field"

[dependencies]
paste = { version = "1" }


[features]
default = []

# weather to #[macro_export] generated macroses
macro-export = []

# adds support for frunk as default coproduct (name of coproduct will be PascalCase of generated_macro_name)
frunk = []